syntax = "proto3";

package berty.p2p;

import "gogoproto/gogo.proto";

option go_package = "berty.tech/core/api/p2p";

enum ConnectionType {
  // sender does not have a connection to peer, and no extra information (default)
  NOT_CONNECTED = 0;

  // sender has a live connection to peer
  CONNECTED = 1;

  // sender recently connected to peer
  CAN_CONNECT = 2;

  // sender recently tried to connect to peer repeatedly but failed to connect
  // ("try" here is loose, but this should signal "made strong effort, failed")
  CANNOT_CONNECT = 3;
}

message Peer {
  // ID of a given peer.
  string id = 1 [(gogoproto.customname) = "ID"];

  // multiaddrs for a given peer
  repeated string addrs = 2;

  // used to signal the sender's connection capabilities to the peer
  ConnectionType connection = 3;
}

message Peers {
  repeated Peer list = 1;
}
